# post-mortem

./: .env.example  .gitignore  DESIGN.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: schema.sql
docs/: comfyui-qwentts-wsl-setup.md  production-gap-backlog.md
prompts/: description_system.txt  host_1_persona.txt  host_2_persona.txt  outline_system.txt  scoring_system.txt  scoring_user.txt  script_system.txt  title_system.txt
schemas/: episode_plan.schema.json  scoring_result.schema.json
scripts/: backfill_candidates.py  bootstrap_db.py  run_pipeline.py  test_render.py
src/: main.py
tests/: test_bluesky_client.py  test_bootstrap.py  test_candidates.py  test_comfy_qwen_tts_client.py  test_config.py  test_dashboard_config_editor.py  test_dashboard_layout.py  test_dashboard_progress.py  test_dashboard_server.py  test_dashboard_shutdown.py  test_fal_client.py  test_fetch_source_queue.py  test_ffmpeg.py  test_filter.py  test_generate_scenes.py  test_hyperframes.py  test_integration_data_ingestion.py  test_integration_full_media_pipeline.py  test_integration_full_pipeline.py  test_integration_outline_script.py  test_integration_outline_visuals.py  test_integration_script_voice.py  test_llm_scoring.py  test_notify.py  test_outline.py  test_product_naming.py  test_publish.py  test_reddit_client.py  test_render.py  test_retry.py  test_run_daily.py  test_score.py  test_script.py  test_select.py  test_source_neutral_candidates.py  test_source_queue.py  test_source_queue_cli.py  test_tts_provider_selection.py  test_visuals.py  (+3 more)
(+51 files in other folders)
